Run in Docker as a non-root user
Also adds some JVM args to improve memory usage